<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyContact</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription"></string>
    <string name="dial">Dial</string>
    <string name="sms">SMS</string>
    <string name="mail">Mail</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_choose">Complete action using</string>
    <string name="no_choose">No Mail App Found!</string>
    <string name="company">Company:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="add">Add</string>
    <string name="search">Search</string>

</resources>