<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/info_bg"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="8dip" >

        <TextView
            android:id="@+id/name_in_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="5dip"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:background="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/company"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="3"
                android:gravity="left"
                android:lines="2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/phone"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="3"
                android:gravity="left"
                android:lines="2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="3"
                android:gravity="left"
                android:lines="2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/address"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:layout_marginLeft="8dip"
                android:layout_weight="3"
                android:gravity="left"
                android:lines="2"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:orientation="horizontal"
        android:padding="2dip" >

        <!-- put whatever you want in the expandable view -->

        <Button
            android:id="@+id/btn_dial"
            style="@style/btnStyleBeige"
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_margin="3dip"
            android:layout_weight="1"
            android:text="@string/dial" />

        <Button
            android:id="@+id/btn_sms"
            style="@style/btnStyleBeige"
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_margin="3dip"
            android:layout_weight="1"
            android:text="@string/sms" />

        <Button
            android:id="@+id/btn_mail"
            style="@style/btnStyleBeige"
            android:layout_width="0dip"
            android:layout_height="35dip"
            android:layout_margin="3dip"
            android:layout_weight="1"
            android:text="@string/mail" />
    </LinearLayout>

</LinearLayout>